feat: enhance README and bean name strategy (main)
- Add singleton and prototype scope support with @Scope in README
- Include bean lifecycle control with @PostConstruct and @PreDestroy
- Correct formatting of Lombok and MineDown in README
- Update SLF4J logging mention in README
- Improve DefaultBeanNameStrategy bean name format
- Bump project version to 0.1.1-SNAPSHOT in pom.xml